--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -13,6 +13,10 @@ h1,h2,h3{
     color: gray;
 }
 
+.App{
+    transition: all 0.5s ease;
+}
+
 
 @import "./_song.scss";
 @import "./_player.scss";
